// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideBar Component SideBar renders 1`] = `
<div>
  <nav
    class="container"
    style="height: 600px; width: 270px;"
  >
    <ul
      class="sidebar"
      style="width: 270px; left: 0px;"
    >
      <div
        class="section"
      >
        LABEL
      </div>
      <li
        class="item"
      >
        <div
          class=""
        >
          full url
          _blank
          <div
            class="label"
          >
            EXTERNAL
          </div>
          <i
            class="icon externalLink"
            icon="fal,external-link"
          />
        </div>
      </li>
      <li
        class="item disabled"
      >
        <div
          class="disabled"
        >
          full url
          <div
            class="label"
          >
            DISABLED
          </div>
        </div>
      </li>
      <li
        class="item"
      >
        <div
          class=""
        >
          full url
          <div
            class="label"
          >
            NORMAL
          </div>
        </div>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`SideBar Component SideBar renders without sections 1`] = `
<div>
  <nav
    class="container"
    style="height: 600px; width: 270px;"
  >
    <ul
      class="sidebar"
      style="width: 270px; left: 0px;"
    />
  </nav>
</div>
`;
